# sitemap

./: .env  celery_process.py  db.sqlite3  manage.py  pyproject.toml  read.md  send.py  task.py  xml_parser.py
django_xml/: asgi.py  consumers.py  models.py  settings.py  urls.py  wsgi.py
sitemap_manager/: apps.py  models.py  urls.py  views.py
sitemap_manager/migrations/: 0001_initial.py
sitemap_manager/templates/: Assistants.html  Create_assistant.html  chat-styles.css  profile.html  sitemap.html
sitemap_manager/templates/widget/: chat1.html  styles1.css
sitemap_manager/templates/widget/OpenAI_style/: ChatOpenAI.html
sitemap_manager/templates/widget/OpenAI_style/css/: chat-styles.css  dialog.css  helpbot.css  normalize.css  open-props.css  themes.css
sitemap_manager/templates/widget/ver0/: chat-widget.css  component.css  component.js  old_widget.html  server.js
sitemap_manager/templates/widget/ver1/: chat.html  styles.css
static/js/: sitemap.js
